--- a/assets/memoir.ui
+++ b/assets/memoir.ui
@@ -222,9 +222,9 @@
          </property>
          <property name="geometry">
           <rect>
-           <x>270</x>
+           <x>240</x>
            <y>340</y>
-           <width>41</width>
+           <width>91</width>
            <height>31</height>
           </rect>
          </property>
@@ -235,7 +235,7 @@
         <widget class="QLabel" name="label_3">
          <property name="geometry">
           <rect>
-           <x>240</x>
+           <x>220</x>
            <y>350</y>
            <width>21</width>
            <height>16</height>
@@ -365,6 +365,19 @@
          </property>
          <property name="text">
           <string/>
+         </property>
+        </widget>
+        <widget class="QLabel" name="chenX">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>395</y>
+           <width>121</width>
+           <height>21</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Xi: </string>
          </property>
         </widget>
        </widget>
